fixed footer padding on ios

--- a/src/global/components/Footer/Footer.scss
+++ b/src/global/components/Footer/Footer.scss
@@ -4,7 +4,7 @@ footer {
   left: 0;
   right: 0;
   z-index: 2;
-  padding: 10px 10px calc(15px + env(safe-area-inset-bottom, 0px)) 10px;
+  padding: 10px 10px max(env(safe-area-inset-bottom, 0px), 10px) 10px;
   > * {
     position: relative;
     margin-left: 10px;
