--- a/src/global/components/Nav/MenuTrigger.scss
+++ b/src/global/components/Nav/MenuTrigger.scss
@@ -4,7 +4,7 @@ $active: var(--white);
 .menu-trigger {
   display: block;
   cursor: pointer;
-  padding: 15px 5px;
+  padding: 13px 5px;
   input {
     display: none;
     & + div {
